--- a/src/pages/listprod/list.css
+++ b/src/pages/listprod/list.css
@@ -1,4 +1,4 @@
-/* .name{
+.name{
   font-size: 1.5rem;
 }
 .price{
@@ -7,4 +7,4 @@
 .productimage{
   border-top-left-radius: .9rem !important;
   border-top-right-radius: .9rem !important;
-} */
+}
