--- a/src/componen/button.css
+++ b/src/componen/button.css
@@ -1,5 +1,6 @@
 .button-orange{
     color: whitesmoke !important;
     font-weight: 600 !important;
-    background: linear-gradient(45deg, #6e798d 10%, #c4b488 110%) !important
+    background-color: transparent !important;
+    border: 1px solid whitesmoke !important;
 }
